--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -42,6 +42,34 @@
     <!-- Page content -->
     <div class="container-fluid">
             <h2>{{ course.name }}</h2>
+            {% if user.is_authenticated %}
+                <h1>Welcome to the {{course.name}}</h1>
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#examCollapse" aria-expanded="false" aria-controls="examCollapse">
+                    Show Exam
+                </button>
+                <div class="collapse" id="examCollapse">
+                    
+                    <!-- Loop through each question -->
+                    {% for question in course.question_set.all %}
+                        <div style="border: 0.5">
+                            <h5 class="card-title" style="background-color: lightgray">{{ question.question_text }}</h5>
+                        </div>
+                        <!-- Loop through each choice for the question -->
+                        {% for choice in question.choice_set.all %}
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" name="selected_choices[]" value="{{ choice.pk }}">
+                                <label class="form-check-label">{{ choice.choice_text }}</label>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                        
+                    <!-- Create a form to collect selected choice ids -->
+                    <form action="submit/" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            {% endif %}
             <div class="card-columns-vertical">
                 {% for lesson in course.lesson_set.all %}
                     <div class="card mt-1">
