--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -40,16 +40,37 @@
     <div class="alert alert-success">
        <!--HINT Display passed info -->
     </div>
-        {% else %}
-        <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+    {% else %}
+    <div class="alert alert-danger">
+        <!--HINT Display failed info -->
+    </div>
+    <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
+    {% endif %}
+    <div class="card-columns-vertical mt-1">
+    <h5 class="">Exam results</h5>
+        <!--HINT Display exam results-->
+        {% for question in course.question_set.all %}
+        <div style="display: flex; flex-direction: column; border: 1px solid lightgray; border-radius: 5px;  margin: 10px;">
+            <div style="display: flex; flex-direction: row; border-bottom: 1px solid lightgray; background-color: whitesmoke;">
+                <h5 class="card-title">{{ question.question_text }}</h5>
+            </div>
+            <!-- Loop through each choice for the question -->
+            <div style="display: flex; flex-direction: row;">
+            {% for choice in question.choice_set.all %}
+                {% if choice.id in selected_ids and choice.is_correct %}
+                <p style="color: green">{{ choice.choice_text }}</p>
+                {% elif choice.is_correct %}
+                <p style="color: gold">{{ choice.choice_text }}</p>
+                {% elif not choice.is_correct and choice.id in selected_ids %}
+                <p style="color: red">{{ choice.choice_text }}</p>
+                {% else %}
+                <p>{{ choice.choice_text }}</p>
+                {% endif %}
+            {% endfor %}
+            </div>
         </div>
-        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
-        <div class="card-columns-vertical mt-1">
-        <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
-        </div>
+        {% endfor %}
+    </div>
     </div>
 </body>
 </html>
