--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -53,16 +53,20 @@
                         {% csrf_token %}
                         <!-- Loop through each question -->
                         {% for question in course.question_set.all %}
-                            <div style="border: 0.5">
-                                <h5 class="card-title" style="background-color: lightgray">{{ question.question_text }}</h5>
+                        <div style="display: flex; flex-direction: column; border: 1px solid lightgray; border-radius: 5px;  margin: 10px; padding-bottom: 15px;">
+                            <div style="display: flex; flex-direction: row; border-bottom: 1px solid lightgray; padding: 10px 0px 10px 10px; background-color: whitesmoke;">
+                                <h5 class="card-title" style="margin: 0;align-items: center;">{{ question.question_text }}</h5>
                             </div>
                             <!-- Loop through each choice for the question -->
+                            <div style="flex-direction: row; padding-left: 10px;">
                             {% for choice in question.choice_set.all %}
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="selected_choices[]" value="{{ choice.pk }}">
-                                    <label class="form-check-label">{{ choice.choice_text }}</label>
-                                </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" name="selected_choices[]" value="{{ choice.pk }}">
+                                <label class="form-check-label">{{ choice.choice_text }}</label>
+                            </div>
                             {% endfor %}
+                            </div>
+                        </div>
                         {% endfor %}
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
